School painting school changes, made it similar to pre-trained caffe experiment. Added reload function in main class.

--- a/JanaComp/ipynb/Coding sparse.ipynb
+++ b/JanaComp/ipynb/Coding sparse.ipynb
@@ -1,9 +1,4 @@
 {
- "metadata": {
-  "name": ""
- },
- "nbformat": 3,
- "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
@@ -17,50 +12,45 @@
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "import numpy as np\n",
       "import sklearn.decomposition as skd\n",
       "import numpy.random as rng"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 1
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "N = 2\n",
       "M = 10\n",
       "X = rng.randn(N, M)"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 2
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
      "input": [
       "K = 7 \n",
       "D = rng.randn(N, K)"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
      "prompt_number": 3
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "Z = np.dot(D.T, X)\n",
-      "print Z.shape"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
@@ -71,19 +61,19 @@
        ]
       }
      ],
+     "input": [
+      "Z = np.dot(D.T, X)\n",
+      "print Z.shape"
+     ],
+     "language": "python",
      "prompt_number": 4
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "Z"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 5,
        "text": [
@@ -101,20 +91,19 @@
         "         0.82236929,  0.19558845, -0.91238006,  1.25365226,  1.9872826 ],\n",
         "       [ 2.43194899, -2.66789335,  0.90921953,  0.16999924,  1.18840484,\n",
         "        -0.79577178,  0.23457665,  3.3232601 , -2.14650841,  1.82784338]])"
-       ]
+       ],
+       "metadata": {}
       }
      ],
+     "input": [
+      "Z"
+     ],
+     "language": "python",
      "prompt_number": 5
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "b = 0.5\n",
-      "Z[Z - b < 0] = 0\n",
-      "print Z"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
@@ -138,6 +127,12 @@
        ]
       }
      ],
+     "input": [
+      "b = 0.5\n",
+      "Z[Z - b < 0] = 0\n",
+      "print Z"
+     ],
+     "language": "python",
      "prompt_number": 6
     },
     {
@@ -149,14 +144,7 @@
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "Z2 = skd.sparse_encode(\n",
-      "X.T, D.T, alpha=b,\n",
-      "algorithm='threshold')\n",
-      "print Z2"
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
@@ -185,6 +173,13 @@
        ]
       }
      ],
+     "input": [
+      "Z2 = skd.sparse_encode(\n",
+      "X.T, D.T, alpha=b,\n",
+      "algorithm='threshold')\n",
+      "print Z2"
+     ],
+     "language": "python",
      "prompt_number": 9
     },
     {
@@ -196,14 +191,7 @@
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "Z3 = skd.sparse_encode(\n",
-      "X.T, D.T, algorithm='omp',\n",
-      "n_nonzero_coefs=3)\n",
-      "print Z3 "
-     ],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
      "outputs": [
       {
@@ -227,18 +215,32 @@
        ]
       }
      ],
+     "input": [
+      "Z3 = skd.sparse_encode(\n",
+      "X.T, D.T, algorithm='omp',\n",
+      "n_nonzero_coefs=3)\n",
+      "print Z3"
+     ],
+     "language": "python",
      "prompt_number": 11
     },
     {
      "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "execution_count": null,
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
     }
-   ],
-   "metadata": {}
+   ]
   }
- ]
+ ],
+ "cells": [],
+ "metadata": {
+  "name": ""
+ },
+ "nbformat": 3,
+ "nbformat_minor": 0
 }
